# extra_files

./: CMakeLists.txt  README.md  deletedialog.cpp  deletedialog.h  deletedialog.ui  dialog.ui  dirdemo.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
back/: CMakeLists.txt  clusterWorker.cpp  clustering.cpp
back/headers/: clusterWorker.h  clustering.h  consts.h
